Reduced font size for main menu, fixed 2 new questions added x, new option frame will now also autoSelect on single option. More new emoticons

--- a/quiz.html
+++ b/quiz.html
@@ -152,6 +152,7 @@
         <button id="checkBtn" class="action-button" type="button" data-translate="Check">Controleren</button>
         <button id="nextBtn" class="action-button" type="button" data-translate="Next">Volgende</button>
         <button id="seeResultsBtn" class="action-button" type="button" data-translate="SeeResults">Resultaat</button>
+        <button id="testBtn" style="display: none;" class="action-button" >test</button>
     </div>
     <div id="swContainer" style="display: none;">
         <div id="slidingWindow" class="sliding-window">
