Added Latin Pronouns Support

--- a/quiz.html
+++ b/quiz.html
@@ -66,6 +66,8 @@
             <div id="miNouns" class="miForms"></div>
             <div class="menuHeader" data-translate="Adjectives">Bijvoegelijke naamwoorden</div>
             <div id="miAdjectives" class="miForms"></div>
+            <div class="menuHeader latinOnly" data-translate="Pronouns">Voornaamwoorden</div>
+            <div id="miPronouns" class="miForms latinOnly"></div>
             <div class="menuHeader" data-translate="Case">Naamval</div>
             <div id="miNaamval" class="miFilter"></div>
             <div class="menuHeader" data-translate="Number">Getal</div>
@@ -111,7 +113,7 @@
                         <button class="option greekOnly" data-type="aor">aor</button>
                         <button class="option" data-type="perf">perf</button>
                         <button class="option" data-type="plqpf" data-translate="plqpf" >plqpf</button>
-                        <button class="option latijn" data-type="fex">fex</button>
+                        <button class="option latinOnly" data-type="fex">fex</button>
                     </div>
                     <div class="option-group">
                         <button class="option" data-type="1e-ev" data-translate="1st sg">1e ev</button>
@@ -133,7 +135,7 @@
                         <button class="option" data-type="gen">gen</button>
                         <button class="option" data-type="dat">dat</button>
                         <button class="option" data-type="acc">acc</button>
-                        <button class="option latijn" data-type="abl">abl</button>
+                        <button class="option latinOnly" data-type="abl">abl</button>
                     </div>
                     <div class="option-group">
                         <button class="option" data-translate="Singular" data-type="ev">ev</button>
