--- a/tools.html
+++ b/tools.html
@@ -6,7 +6,7 @@
     <title>Athena Tools</title>
     <script type="module">
         import { qGreekVerb, qLatinVerb, qLatinNoun, qLatinAdjectives,qGreekNoun,
-            qGreekAdjective
+            qGreekAdjective, qLatinPronouns
          } from './questions.js';
 
 
@@ -36,7 +36,8 @@
                 " LN: " + extractUniqueAnswers(qLatinNoun) + 
                 " LA: " + extractUniqueAnswers(qLatinAdjectives) + 
                 " GN: " + extractUniqueAnswers(qGreekNoun) +
-                " GA: " + extractUniqueAnswers(qGreekAdjective)
+                " GA: " + extractUniqueAnswers(qGreekAdjective) +
+                " LP: "+ extractUniqueAnswers(qLatinPronouns) 
             );
         }
         document.getElementById('uniqueBtn').addEventListener('click', function() {
