Added Pronounce Greek, 1/2nd person disabled buttons, clickable headers for some headers for toggling all checkboxes.

--- a/quiz.html
+++ b/quiz.html
@@ -62,12 +62,12 @@
         <div id="naamwoordenMenu" class="naamwoorden">
             <div class="menuHeader" data-translate="Filters">Filters</div>
             <div id="miNominals" class="miForms"></div>
-            <div class="menuHeader" data-translate="Nouns">Zelfstandig naamwoorden</div>
+            <div id="nounsHeader" class="menuHeader" data-translate="Nouns">Zelfstandig naamwoorden</div>
             <div id="miNouns" class="miForms"></div>
-            <div class="menuHeader" data-translate="Adjectives">Bijvoegelijke naamwoorden</div>
+            <div id="adjectivesHeader" class="menuHeader" data-translate="Adjectives">Bijvoegelijke naamwoorden</div>
             <div id="miAdjectives" class="miForms"></div>
-            <div class="menuHeader latinOnly" data-translate="Pronouns">Voornaamwoorden</div>
-            <div id="miPronouns" class="miForms latinOnly"></div>
+            <div id="pronounsHeader" class="menuHeader" data-translate="Pronouns">Voornaamwoorden</div>
+            <div id="miPronouns" class="miForms"></div>
             <div class="menuHeader" data-translate="Case">Naamval</div>
             <div id="miNaamval" class="miFilter"></div>
             <div class="menuHeader" data-translate="Number">Getal</div>
